--- a/P000363.opf/layers/v001/Pagination.yml
+++ b/P000363.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 30d19c2647ef4b428f80a839375fbd1d
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   14900198dd2b4c01a2c9eb1ae6f46e71:
