--- a/P000363.opf/layers/v002/Pagination.yml
+++ b/P000363.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 582219093540438c9c779d9c7a88babf
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6a9426f457454073b1fc3b4513bc0e67:
