--- a/P000363.opf/meta.yml
+++ b/P000363.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000363
 initial_creation_type: ocr
+created_at: 16/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W27491
   title: རྙིང་མའི་རྒྱུད་བཅུ་བདུན།（འབྲུག་བུམ་ཐང་ཐར་པ་གླིང་གི་པར་མ།）
@@ -17,10 +19,3 @@ source_metadata:
       volume_number: 2
       total_pages: 666
       base_file: v002.txt
-ebook_metadata:
-  title: རྙིང་མའི་རྒྱུད་བཅུ་བདུན།（འབྲུག་བུམ་ཐང་ཐར་པ་གླིང་གི་པར་མ།）
-  author: ''
-  sku: P000363
-  cover: cover.jpg
-  layers:
-  - pagination
